# ShapeRegistration

./: .gitignore  CMakeLists.txt  README.md  TODOs.md
scripts/: format
src/: Makefile  helper.cu  helper.h  main.cu  shapeRegistration.cu  shapeRegistration.h  shapeRegistrationGPU.cu  shapeRegistrationGPU.h  testing.cu  testing.h  testingGPU.cu  testingGPU.h
